# Face-recognition

./: CMakeLists.txt  Encode_faces  Encode_faces.cpp  Face_recognition_SFR  Face_recognition_SFR.cpp  Face_recognition_SFR.py  Nuera_Face_recognition.cpp  README.md  capture_frames.py  capture_frames_webcam.py  encode.py  encodings  encodings_model_large  encodings_model_small  faceDetect.cpp  requirements.txt  requirements_SFR.txt
ActiveTcl-8.6.8.0-x86_64-linux-glibc-2.5-28eabcbe7/: MANIFEST_at8.6.txt  README-8.6-thread.txt  install_data.tcl  install_welcome.txt  komodo_download  license-at8.6-thread.terms  update_check
ActiveTcl-8.6.8.0-x86_64-linux-glibc-2.5-28eabcbe7/payload/include/: itclInt.h
ActiveTcl-8.6.8.0-x86_64-linux-glibc-2.5-28eabcbe7/payload/lib/: nsfConfig.sh  tclConfig.sh  tkConfig.sh
face tracking/: Face_tracking.py
page/: first_win.py  first_win.py.bak1  first_win.py.bak2  first_win.py.bak3  first_win.py.bak4  first_win.py.bak5  first_win.tcl  first_win.tcl.bak1  first_win.tcl.bak2  first_win.tcl.bak3  first_win_support.py  first_win_support.py.bak1  first_win_support.py.bak2  first_win_support.py.bak3  page  page.tcl  release  second_win.py  second_win.py.bak1  second_win.py.bak2  second_win.py.bak3  second_win.py.bak4  second_win.py.bak5  second_win.tcl  second_win.tcl.bak1  second_win.tcl.bak2  second_win.tcl.bak3  second_win.tcl.bak4  second_win.tcl.bak5  second_win_support.py  second_win_support.py.bak1  third_win.py  third_win.py.bak1  third_win.py.bak2  third_win.py.bak3  third_win.py.bak4  third_win.py.bak5  third_win.tcl  third_win.tcl.bak1  third_win.tcl.bak2  (+5 more)
page/WIN_INSTALL/: page.iss
page/docs/: README
page/docs/epub/: PAGE.epub
page/docs/html/: index.html  interface.html  intro.html  objects.inv  preferences.html  searchindex.js  use.html
page/lib/: TAGS  balloon.tcl  bind.tcl  color.tcl  compound.tcl  debug.tcl  dragsize.tcl  dump.tcl  edit.tcl  file.tcl  font.tcl  globals.tcl  gui_python_gen.tcl  images.tcl  input.tcl  lib_core.tcl  lib_ttk.tcl  menus.tcl  misc.tcl  prefs.tcl  propmgr.tcl  support_python_gen.tcl  toolbar.tcl  tooltip.tcl  tree.tcl  widget.tcl
page/lib/Widgets/: README
page/lib/Widgets/core/: menu.wgt  (+12 more)
python_KNN/: Encode_faces_Labview_supported.py  Face_Recognition_Labview_supported.py  Face_Recognition_server.py  Iterative_KNN.py  Iterative_KNN_image.py  dlib_encode.py  encodings_file_new.csv  encodings_name_dlib  first_win.py  first_win_support.py  knn_classifier.py  knn_classifier_gui.py  knn_classifier_model.sav  knn_model.py  second_win_support.py
python_KNN/Face Recognition/: Read me.txt
python_KNN/Face Recognition/dependencies/: Encodings  Encodings_csv.csv  knn_classifier_model.sav
python_KNN/Face_Recognition_3.0/: ReadMe.txt  Recognition_results.xml
python_KNN/dependencies/: Encodings  Encodings_csv.csv  knn_classifier_model.sav
(+30 files in other folders)
